# sdkwork-api-server

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
crates/sdkwork-api-app-billing/: Cargo.toml
crates/sdkwork-api-app-billing/src/: account_balance.rs  account_mutations.rs  billing_events.rs  billing_inputs.rs  billing_kernels.rs  billing_summary.rs  billing_support.rs  commerce_credits.rs  lib.rs  pricing_lifecycle.rs
crates/sdkwork-api-app-billing/tests/: account_kernel_mutations.rs  account_kernel_service.rs  billing_summary.rs  quota_and_ledger.rs
crates/sdkwork-api-app-catalog/: Cargo.toml
crates/sdkwork-api-app-catalog/src/: lib.rs
crates/sdkwork-api-app-catalog/tests/: commercial_catalog.rs  create_provider.rs  model_price_guardrails.rs
crates/sdkwork-api-app-commerce/: Cargo.toml
crates/sdkwork-api-app-commerce/src/: constants.rs  coupon_catalog.rs  coupon_state.rs  error.rs  lib.rs  order.rs  payment_attempt.rs  payment_event.rs  payment_method.rs  reconciliation.rs  refund.rs  settlement.rs  types.rs  webhook.rs
crates/sdkwork-api-app-commerce/tests/: commerce_checkout_bridge.rs  commerce_order_settlement.rs  marketing_checkout_closure.rs
crates/sdkwork-api-app-coupon/: Cargo.toml
crates/sdkwork-api-app-coupon/src/: lib.rs
crates/sdkwork-api-app-coupon/tests/: active_coupons.rs
crates/sdkwork-api-app-credential/: Cargo.toml
crates/sdkwork-api-app-credential/src/: lib.rs
crates/sdkwork-api-app-credential/tests/: batch_delete_credentials.rs  save_credential.rs
crates/sdkwork-api-app-extension/: Cargo.toml
crates/sdkwork-api-app-extension/src/: lib.rs
crates/sdkwork-api-app-extension/tests/: runtime_observability.rs
crates/sdkwork-api-app-gateway/: Cargo.toml
crates/sdkwork-api-app-gateway/src/: gateway_cache.rs  gateway_execution_context.rs  gateway_extension_host.rs  gateway_provider_resolution.rs  gateway_routing.rs  gateway_runtime_execution.rs  gateway_types.rs  lib.rs  model_catalog.rs  relay_assistants_realtime_webhooks.rs  relay_chat.rs  relay_compute.rs  relay_containers.rs  relay_conversations.rs  relay_evals_batches.rs  relay_files_uploads.rs  relay_fine_tuning.rs  relay_music_video.rs  relay_responses.rs  relay_threads.rs  relay_vector_stores.rs  request_context.rs  tests.rs
crates/sdkwork-api-app-gateway/tests/: assistants_api.rs  batches_api.rs  chat_completions.rs  completions_api.rs  connector_runtime_dispatch.rs  conversations_api.rs  embeddings_api.rs  evals_api.rs  execution_context.rs  extension_dispatch.rs  files_api.rs  fine_tuning_api.rs  images_api.rs  list_models.rs  moderations_api.rs  planned_execution.rs  provider_accounts.rs  provider_failover.rs  raw_execution_governance.rs  realtime_sessions_api.rs  responses_api.rs  routing_policy_dispatch.rs  runs_api.rs  speech_api.rs  threads_api.rs  transcriptions_api.rs  translations_api.rs  uploads_api.rs  vector_store_file_batches_api.rs  vector_store_files_api.rs  vector_store_search_api.rs  vector_stores_api.rs  videos_api.rs  webhooks_api.rs
crates/sdkwork-api-app-identity/: Cargo.toml
crates/sdkwork-api-app-identity/src/: admin_users.rs  api_key_groups.rs  gateway_api_keys.rs  identity_support.rs  identity_types.rs  jwt_support.rs  lib.rs  portal_api_keys.rs  portal_users.rs  tests.rs
crates/sdkwork-api-app-identity/tests/: admin_identity.rs  api_key_groups.rs  create_api_key.rs  gateway_auth_context.rs  jwt_and_api_key.rs  portal_identity.rs
crates/sdkwork-api-app-marketing/: Cargo.toml
crates/sdkwork-api-app-marketing/src/: lib.rs
crates/sdkwork-api-app-marketing/tests/: code_issue_and_redeem.rs  redemption_queries.rs  validate_reserve_redeem.rs
crates/sdkwork-api-app-payment/: Cargo.toml
crates/sdkwork-api-app-payment/src/: lib.rs
crates/sdkwork-api-app-payment/tests/: payment_callback_processing.rs  payment_order_service.rs
crates/sdkwork-api-app-rate-limit/: Cargo.toml
crates/sdkwork-api-app-rate-limit/src/: lib.rs
crates/sdkwork-api-app-routing/: Cargo.toml
crates/sdkwork-api-app-routing/src/: candidate_selection.rs  lib.rs  route_inputs.rs  route_management.rs  route_selection.rs  routing_support.rs
crates/sdkwork-api-app-routing/tests/: simulate_route.rs
crates/sdkwork-api-app-runtime/: Cargo.toml
crates/sdkwork-api-app-runtime/src/: lib.rs  rollout_execution.rs  rollout_models.rs  runtime_builders.rs  runtime_core.rs  runtime_reload.rs  standalone_listener.rs  tests.rs
crates/sdkwork-api-app-runtime/tests/: standalone_runtime_supervision.rs
crates/sdkwork-api-app-tenant/: Cargo.toml
crates/sdkwork-api-app-tenant/src/: lib.rs
crates/sdkwork-api-app-usage/: Cargo.toml
crates/sdkwork-api-app-usage/src/: lib.rs
crates/sdkwork-api-app-usage/tests/: record_usage.rs  usage_summary.rs
crates/sdkwork-api-extension-host/: Cargo.toml
crates/sdkwork-api-extension-host/src/: connector_runtime.rs  errors.rs  extension_discovery.rs  extension_trust.rs  host_impl.rs  host_types.rs  lib.rs  native_dynamic_runtime.rs  provider_invocation.rs  tests.rs
crates/sdkwork-api-extension-host/tests/: builtin_host.rs  connector_runtime.rs  discovery.rs  instance_mounting.rs  load_planning.rs  native_dynamic_runtime.rs
crates/sdkwork-api-interface-admin/: Cargo.toml
crates/sdkwork-api-interface-admin/src/: audit.rs  auth.rs  billing.rs  catalog.rs  commerce.rs  gateway.rs  jobs.rs  lib.rs  marketing.rs  openapi.rs  payments.rs  pricing.rs  routes.rs  routing.rs  runtime.rs  tenant.rs  types.rs  users.rs
crates/sdkwork-api-interface-admin/tests/: admin_auth_guard.rs  (+10 more)
crates/sdkwork-api-interface-http/: Cargo.toml
crates/sdkwork-api-interface-portal/: Cargo.toml
crates/sdkwork-api-observability/: Cargo.toml
crates/sdkwork-api-product-runtime/: Cargo.toml
crates/sdkwork-api-provider-core/: Cargo.toml
crates/sdkwork-api-provider-ollama/: Cargo.toml
crates/sdkwork-api-storage-core/: Cargo.toml
crates/sdkwork-api-storage-postgres/: Cargo.toml
crates/sdkwork-api-storage-sqlite/: Cargo.toml
services/admin-api-service/: Cargo.toml
services/gateway-service/: Cargo.toml
services/portal-api-service/: Cargo.toml
(+2029 files in other folders)
