[workspace]
members = [
    "crates/sdkwork-api-app-billing",
    "crates/sdkwork-api-app-commerce",
    "crates/sdkwork-api-app-catalog",
    "crates/sdkwork-api-app-rate-limit",
    "crates/sdkwork-api-app-coupon",
    "crates/sdkwork-api-app-credential",
    "crates/sdkwork-api-app-extension",
    "crates/sdkwork-api-app-runtime",
    "crates/sdkwork-api-ext-provider-native-mock",
    "crates/sdkwork-api-extension-abi",
    "crates/sdkwork-api-extension-core",
    "crates/sdkwork-api-extension-host",
    "crates/sdkwork-api-app-gateway",
    "crates/sdkwork-api-app-routing",
    "crates/sdkwork-api-app-tenant",
    "crates/sdkwork-api-app-usage",
    "crates/sdkwork-api-app-identity",
    "crates/sdkwork-api-config",
    "crates/sdkwork-api-contract-gateway",
    "crates/sdkwork-api-contract-openai",
    "crates/sdkwork-api-domain-billing",
    "crates/sdkwork-api-domain-catalog",
    "crates/sdkwork-api-domain-commerce",
    "crates/sdkwork-api-domain-coupon",
    "crates/sdkwork-api-domain-credential",
    "crates/sdkwork-api-domain-identity",
    "crates/sdkwork-api-domain-rate-limit",
    "crates/sdkwork-api-domain-routing",
    "crates/sdkwork-api-domain-tenant",
    "crates/sdkwork-api-domain-usage",
    "crates/sdkwork-api-kernel",
    "crates/sdkwork-api-observability",
    "crates/sdkwork-api-provider-core",
    "crates/sdkwork-api-provider-ollama",
    "crates/sdkwork-api-provider-openai",
    "crates/sdkwork-api-provider-openrouter",
    "crates/sdkwork-api-product-runtime",
    "crates/sdkwork-api-runtime-host",
    "crates/sdkwork-api-secret-core",
    "crates/sdkwork-api-secret-keyring",
    "crates/sdkwork-api-secret-local",
    "crates/sdkwork-api-storage-core",
    "crates/sdkwork-api-storage-libsql",
    "crates/sdkwork-api-storage-mysql",
    "crates/sdkwork-api-storage-postgres",
    "crates/sdkwork-api-storage-sqlite",
    "crates/sdkwork-api-interface-admin",
    "crates/sdkwork-api-interface-http",
    "crates/sdkwork-api-openapi",
    "crates/sdkwork-api-interface-portal",
    "services/admin-api-service",
    "services/gateway-service",
    "services/portal-api-service",
    "services/router-product-service",
    "services/router-web-service",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bytes = "1"
ed25519-dalek = "2.1"
futures-util = "0.3"
jsonwebtoken = "9.3"
keyring = "3.6.2"
libloading = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serial_test = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
