[package]
name = "sdkwork-api-app-billing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-policy-quota = { path = "../sdkwork-api-policy-quota" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
