[package]
name = "sdkwork-api-app-billing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-api-app-identity = { path = "../sdkwork-api-app-identity" }
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-commerce = { path = "../sdkwork-api-domain-commerce" }
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-domain-payment = { path = "../sdkwork-api-domain-payment" }
sdkwork-api-policy-quota = { path = "../sdkwork-api-policy-quota" }
sha2.workspace = true
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
