[package]
name = "sdkwork-api-app-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
utoipa.workspace = true

[dev-dependencies]
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
