[package]
name = "sdkwork-api-app-coupon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-coupon = { path = "../sdkwork-api-domain-coupon" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[dev-dependencies]
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
