[package]
name = "sdkwork-api-app-credential"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-credential = { path = "../sdkwork-api-domain-credential" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[lib]
path = "src/lib.rs"
