[package]
name = "sdkwork-api-app-credential"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-credential = { path = "../sdkwork-api-domain-credential" }
sdkwork-api-secret-core = { path = "../sdkwork-api-secret-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
