[package]
name = "sdkwork-api-app-extension"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-extension-host = { path = "../sdkwork-api-extension-host" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[dev-dependencies]
serial_test.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"
