[package]
name = "sdkwork-api-app-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
sdkwork-api-app-credential = { path = "../sdkwork-api-app-credential" }
sdkwork-api-app-rate-limit = { path = "../sdkwork-api-app-rate-limit" }
sdkwork-api-app-routing = { path = "../sdkwork-api-app-routing" }
sdkwork-api-cache-core = { path = "../sdkwork-api-cache-core" }
sdkwork-api-cache-memory = { path = "../sdkwork-api-cache-memory" }
sdkwork-api-contract-openai = { path = "../sdkwork-api-contract-openai" }
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-domain-routing = { path = "../sdkwork-api-domain-routing" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-extension-host = { path = "../sdkwork-api-extension-host" }
sdkwork-api-observability = { path = "../sdkwork-api-observability" }
sdkwork-api-provider-core = { path = "../sdkwork-api-provider-core" }
sdkwork-api-provider-ollama = { path = "../sdkwork-api-provider-ollama" }
sdkwork-api-provider-openai = { path = "../sdkwork-api-provider-openai" }
sdkwork-api-provider-openrouter = { path = "../sdkwork-api-provider-openrouter" }
serde.workspace = true
serde_json.workspace = true
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true
utoipa.workspace = true

[dev-dependencies]
axum.workspace = true
ed25519-dalek.workspace = true
serial_test.workspace = true
serde.workspace = true
sha2.workspace = true
sdkwork-api-app-catalog = { path = "../sdkwork-api-app-catalog" }
sdkwork-api-ext-provider-native-mock = { path = "../sdkwork-api-ext-provider-native-mock" }
sdkwork-api-domain-routing = { path = "../sdkwork-api-domain-routing" }
sdkwork-api-extension-host = { path = "../sdkwork-api-extension-host" }
toml.workspace = true

[lib]
path = "src/lib.rs"
