[package]
name = "sdkwork-api-app-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
