[package]
name = "sdkwork-api-app-marketing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sdkwork-api-domain-marketing = { path = "../sdkwork-api-domain-marketing" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[dev-dependencies]
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
