[package]
name = "sdkwork-api-app-routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-routing = { path = "../sdkwork-api-domain-routing" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[dev-dependencies]
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
