[package]
name = "sdkwork-api-app-routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-app-extension = { path = "../sdkwork-api-app-extension" }
sdkwork-api-cache-core = { path = "../sdkwork-api-cache-core" }
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-domain-routing = { path = "../sdkwork-api-domain-routing" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-policy-routing = { path = "../sdkwork-api-policy-routing" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde_json.workspace = true

[dev-dependencies]
sdkwork-api-app-catalog = { path = "../sdkwork-api-app-catalog" }
sdkwork-api-cache-memory = { path = "../sdkwork-api-cache-memory" }
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-ext-provider-native-mock = { path = "../sdkwork-api-ext-provider-native-mock" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-extension-host = { path = "../sdkwork-api-extension-host" }
serde_json.workspace = true
serial_test.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
