[package]
name = "sdkwork-api-app-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
sdkwork-api-app-credential = { path = "../sdkwork-api-app-credential" }
sdkwork-api-app-extension = { path = "../sdkwork-api-app-extension" }
sdkwork-api-app-gateway = { path = "../sdkwork-api-app-gateway" }
sdkwork-api-config = { path = "../sdkwork-api-config" }
sdkwork-api-storage-postgres = { path = "../sdkwork-api-storage-postgres" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio = { workspace = true, features = ["net", "sync", "time"] }

[dev-dependencies]
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-ext-provider-native-mock = { path = "../sdkwork-api-ext-provider-native-mock" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-extension-host = { path = "../sdkwork-api-extension-host" }
sdkwork-api-secret-core = { path = "../sdkwork-api-secret-core" }
serial_test.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true

[lib]
path = "src/lib.rs"
