[package]
name = "sdkwork-api-app-tenant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-tenant = { path = "../sdkwork-api-domain-tenant" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
