[package]
name = "sdkwork-api-extension-host"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-provider-core = { path = "../sdkwork-api-provider-core" }
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
