[package]
name = "sdkwork-api-extension-host"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-provider-core = { path = "../sdkwork-api-provider-core" }
toml.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
serde_json.workspace = true
sha2.workspace = true
