[package]
name = "sdkwork-api-interface-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-api-app-catalog = { path = "../sdkwork-api-app-catalog" }
sdkwork-api-app-billing = { path = "../sdkwork-api-app-billing" }
sdkwork-api-app-credential = { path = "../sdkwork-api-app-credential" }
sdkwork-api-app-extension = { path = "../sdkwork-api-app-extension" }
sdkwork-api-app-identity = { path = "../sdkwork-api-app-identity" }
sdkwork-api-app-routing = { path = "../sdkwork-api-app-routing" }
sdkwork-api-app-tenant = { path = "../sdkwork-api-app-tenant" }
sdkwork-api-app-usage = { path = "../sdkwork-api-app-usage" }
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-domain-credential = { path = "../sdkwork-api-domain-credential" }
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-domain-routing = { path = "../sdkwork-api-domain-routing" }
sdkwork-api-domain-tenant = { path = "../sdkwork-api-domain-tenant" }
sdkwork-api-domain-usage = { path = "../sdkwork-api-domain-usage" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
sqlx.workspace = true

[dev-dependencies]
serde_json.workspace = true
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
